--- a/locales/en/LC_MESSAGES/memcacheMonitor.po
+++ b/locales/en/LC_MESSAGES/memcacheMonitor.po
@@ -15,28 +15,28 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.3.4\n"
 
-msgid "{memcacheMonitor:memcachestat:libevent}"
+msgid "Libevent version"
 msgstr "Libevent version"
 
-msgid "{memcacheMonitor:memcachestat:reserved_fds}"
-msgstr "Number of misc fds used internally"
+msgid "Number of file descriptors used internally"
+msgstr "Number of file descriptors used internally"
 
-msgid "{memcacheMonitor:memcachestat:cmd_touch}"
+msgid "Cumulative number of touch reqs"
 msgstr "Cumulative number of touch reqs"
 
-msgid "{memcacheMonitor:memcachestat:touch_hits}"
+msgid "Number of keys that have been touched with a new expiration time"
 msgstr "Number of keys that have been touched with a new expiration time"
 
-msgid "{memcacheMonitor:memcachestat:touch_misses}"
+msgid "Number of items that have been touched and not found"
 msgstr "Number of items that have been touched and not found"
 
-msgid "{memcacheMonitor:memcachestat:hash_power_level}"
+msgid "Current size multiplier for hash table"
 msgstr "Current size multiplier for hash table"
 
-msgid "{memcacheMonitor:memcachestat:hash_bytes}"
+msgid "Bytes currently used by hash tables"
 msgstr "Bytes currently used by hash tables"
 
-msgid "{memcacheMonitor:memcachestat:hash_is_expanding}"
+msgid "Indicates if the hash table is being grown to a new size"
 msgstr "Indicates if the hash table is being grown to a new size"
 
 msgid "{memcacheMonitor:memcachestat:expired_unfetched}"
@@ -47,9 +47,6 @@ msgstr "Items pulled from LRU that were never touched"
 
 msgid "{memcacheMonitor:memcachestat:reclaimed}"
 msgstr "Number of times an entry was stored using memory from an expired entry"
-
-msgid "{memcacheMonitor:memcachestat:delete_misses}"
-msgstr "Total DELETE commands (failed)"
 
 msgid "{memcacheMonitor:memcachestat:total_connections}"
 msgstr "Total connections"
@@ -122,9 +119,6 @@ msgstr "Total DECR commands (success)"
 
 msgid "{memcacheMonitor:memcachestat:bytes_read}"
 msgstr "Bytes in to the server"
-
-msgid "{memcacheMonitor:memcachestat:time}"
-msgstr "Current time"
 
 msgid "{memcacheMonitor:memcachestat:cas_misses}"
 msgstr "Total CAS commands (failed)"
